--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 </html>
